(add new changes on top of this file)

Änderungen
----------

v0.11.12 (??.04.2012)
 * INSERT and UPDATE support for external databases. Thanks to Michael Wagner!
 * constructor name of model_base changed to __construct
 * util_Misc::getPidList forces TSFE creation
 * Filtering passwords in exception mailings. Thanks to Hannes Bochmann!

v0.11.11 (21.02.2012)
 * tx_rnbase_parameters: new method init()
 * tx_rnbase_configurations: getCObj() will always return an instance, even if not set on init().
 * util_Exception::getAdditional() respects asString flag
 * util_Link::makeTag() support for getAbsUrlSchema()
 * util:db_MySQL throws exception if mysql error occures

v0.11.10 (09.02.2012) (not released)
 * tx_rnbase_mod_FormTool: new option "sprite" for BE-links
 * BaseModule: lib. included in TS configuration
 * BaseModule: ModFunc-Menu can be switched by TS from select-box to tabs
 * BaseModule: It is possible to enable or disable SubModules by TS.

v0.11.9 (28.01.2012)
 * tx_rnbase_mod_Util: New methods for sprites.
 * Support for multiple language files in plugins. Thanks to Hannes Bochmann!
 * Fix for charbrowser

v0.11.8 (07.01.2012)
 * tx_rnbase_util_Date: TCA methods fixed for value 0
 * tx_rnbase_util_Misc: translateLLL works in BE and FE

v0.11.7 (03.01.2012) (not released)
 * CharBrowser: parameter name for link can be changed.

v0.11.6 (29.12.2011) (not released)
 * tx_rnbase_mod_Table: links for sorting in BE tables changed.

v0.11.5 (29.12.2011) (not released)
 * tx_rnbase_util_Date: new methods to convert dates in TCA

v0.11.4 (17.12.2011)
 * tx_rnbase::load() requireOnce from t3lib_div used for file loading. Thanks to Michael Wagner!
 * tx_rnbase_util_Exception: return readable values as default. Thanks to Michael Wagner!
 * tx_rnbase_util_Templates: It is possible to disable caching in substituteMarkerArrayCached.
 * util_TSDAM: getMediaTCA supports options array to override config.